<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.project.dung.doantn.sensor_detail.SensorInforFragment">
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    >
    <TableRow
        android:layout_height="0dp"
        android:layout_width="match_parent"
        android:layout_weight="1">

        <TextView
            android:textSize="16sp"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/sensorName" />

        <TextView
            android:id="@+id/txtSensorName"
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            android:layout_weight="2"
            />
    </TableRow>

    <TableRow
        android:layout_height="0dp"
        android:layout_width="match_parent"
        android:layout_weight="1">
       <TextView
        android:textSize="16sp"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/sensorId" />

        <TextView
            android:id="@+id/txtSensorId"
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            android:layout_weight="2"
            />
    </TableRow>

    <TableRow
        android:layout_height="0dp"
        android:layout_width="match_parent"
        android:layout_weight="1">
        <TextView
            android:textSize="16sp"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/location" />

        <TextView
            android:id="@+id/txtSensorLocation"
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            android:layout_weight="2"
            />
    </TableRow>

    <TableRow
        android:layout_height="0dp"
        android:layout_width="match_parent"
        android:layout_weight="1">
        <TextView
            android:textSize="16sp"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/type" />

        <TextView
            android:id="@+id/txtSensorType"
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            android:layout_weight="2"
            />
    </TableRow>

    <TableRow
        android:layout_height="0dp"
        android:layout_width="match_parent"
        android:layout_weight="1">
        <TextView
            android:textSize="16sp"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/sn" />

        <TextView
            android:id="@+id/txtSensorSn"
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            android:layout_weight="2"
            />
    </TableRow>

    <TableRow
        android:layout_height="0dp"
        android:layout_width="match_parent"
        android:layout_weight="1">
        <TextView
            android:textSize="16sp"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/status" />

        <TextView
            android:id="@+id/txtSensorStatus"
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            android:layout_weight="2"
            />
    </TableRow>
</LinearLayout>
    <Button
        android:id="@+id/btnShowMap"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/buttonName"
        />


</LinearLayout>
